# kokogcc

./: .gcloudignore  .gitignore  Dockerfile  Procfile  README.md  app.py  bkupmain  deploy-gcloud.sh  main.py  pyproject.toml  requirements.txt  setup.sh
app/: main.py
app/models/: schemas.py
app/static/: script.js  style.css
app/templates/: index.html
app/tts/: processor.py
downloads/: download_models.py
static/: index.html
